# MaggieAI

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.streamlit/: config.toml
data/grammar_rules/: 01_ablativo_assoluto.yaml  02_accusativo_con_infinito.yaml  03_ut_finale.yaml  04_ut_consecutivo.yaml  05_cum_narrativo.yaml  06_perifrastica_passiva.yaml  07_perifrastica_attiva.yaml  08_participio_congiunto.yaml  09_genitivo_partitivo.yaml  10_dativo_possesso.yaml  11_ablativo_causa.yaml  12_ablativo_mezzo.yaml  13_interrogativa_indiretta.yaml  14_ut_completivo.yaml  15_ne_timore.yaml  16_quin_dubitativo.yaml  17_concessiva.yaml  18_causale_quod.yaml  19_relativa_caratteristica.yaml  20_periodo_ipotetico.yaml  21_cum_indicativo.yaml  22_postquam_ubi_simul.yaml  23_dum.yaml  24_antequam_priusquam.yaml  25_esortativo.yaml  26_iussivo.yaml  27_ottativo.yaml  28_ablativo_agente.yaml  29_ablativo_paragone.yaml  30_ablativo_separazione.yaml  31_locativo.yaml  32_gerundio.yaml  33_supino_um.yaml  34_deponenti.yaml  35_impersonali.yaml  36_dativo_termine.yaml  37_dativo_fine.yaml  38_dativo_intransitivi.yaml  39_genitivo_possessivo.yaml  40_genitivo_oggettivo.yaml  (+3 more)
docker/: Dockerfile.gateway  Dockerfile.morphology
eval/: respondeo_lat_en.jsonl
prompts/: draft_translation.j2  self_critique.j2  system_critic.j2  system_translator.j2
src/maggieai/: __init__.py  config.py
src/maggieai/agent/: graph.py  nodes.py  prompts.py  state.py  tools.py
src/maggieai/db/: engine.py  models.py  schema.sql
src/maggieai/eval/: coverage.py  runner.py
src/maggieai/gateway/: app.py
src/maggieai/inference/: claude_api.py  client.py  deepseek_api.py  mlx_local.py  router.py  server.py
src/maggieai/ingestion/: aligner.py  cli.py  embedder.py  grammar_loader.py  perseus.py
src/maggieai/morphology/: api.py  phenomena.py  pipeline.py
src/maggieai/ui/: app.py  cli.py
tests/unit/: test_aligner.py  test_claude_split.py  test_coverage.py  test_deepseek_retry.py  test_eval_compare.py  test_grammar_loader.py  test_node_helpers.py  test_perseus.py  test_phenomena.py  test_pipeline_normalize.py  test_prompts.py
