[project]
name = "maggieai"
version = "0.1.0"
description = "Agentic RAG for Classical Latin — translation with morphological reasoning, translation memory, and grammar evidence"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Marco Strada" }]
license = { text = "MIT" }

dependencies = [
    # Web / API
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.28",
    # Config / models
    "pydantic>=2.10",
    "pydantic-settings>=2.6",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    # Agent orchestration
    "langgraph>=0.2.50",
    "langchain-core>=0.3",
    "langchain-postgres>=0.0.13",
    "langchain-anthropic>=0.3",
    "anthropic>=0.40",
    # DB
    "psycopg[binary]>=3.2",
    "pgvector>=0.3",
    "sqlalchemy>=2.0",
    # Embeddings (used by ingestion + retrieval)
    "sentence-transformers>=3.3",
    # Latin NLP
    "cltk>=1.4",
    # Ingestion / scraping
    "requests>=2.32",
    "beautifulsoup4>=4.12",
    "lxml>=5.3",
    # CLI
    "click>=8.1",
    "rich>=13.9",
]

[project.optional-dependencies]
# Apple-Silicon-only inference. Installed only on the host running mlx_local.py.
inference-local = [
    "mlx-lm>=0.20",
]
# Streamlit UI for trace inspection (Sprint 4 deliverable).
ui = [
    "streamlit>=1.40",
]
# Evaluation harness.
eval = [
    "sacrebleu>=2.4",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "types-pyyaml>=6.0",
    "types-requests>=2.32",
]

[project.scripts]
maggie-ingest = "maggieai.ingestion.cli:cli"
maggie-gateway = "maggieai.gateway.app:run"
maggie-morphology = "maggieai.morphology.api:run"
maggie-inference = "maggieai.inference.server:run"
maggie-eval = "maggieai.eval.runner:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/maggieai"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E", "F", "W",
    "I",
    "UP",
    "B",
    "SIM",
    "RUF",
]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_decorators = false
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["cltk.*", "lxml.*", "mlx_lm.*", "pgvector.*", "sacrebleu.*", "sentence_transformers.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
